--- a/manifest.json
+++ b/manifest.json
@@ -329,7 +329,8 @@
 					"htmls/login.html",
 					"htmls/address.html",
 					"htmls/my_orders_main.html",
-					"htmls/feedback.html"
+					"htmls/feedback.html",
+					"htmls/join_in.html"
 				],
 				"priority": 0
 			},
@@ -427,7 +428,9 @@
 					"js/city.data.js",
 					"css/mui.poppicker.css",
 					"css/mui.picker.css",
-					"js/city.data-3.js"
+					"js/city.data-3.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css"
 				],
 				"refer": [
 					"htmls/address.html"
@@ -467,7 +470,8 @@
 				"resources": [
 					"images/aaa.jpg",
 					"js/mui.min.js",
-					"css/mui.min.css"
+					"css/mui.min.css",
+					"fonts/mui.ttf"
 				],
 				"refer": [
 					"htmls/order_detail.html"
@@ -504,7 +508,9 @@
 			"htmls/order_detail.html": {
 				"resources": [
 					"images/aaa.jpg",
-					"js/mui.min.js"
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css"
 				],
 				"refer": [
 					"htmls/pay_mode.html"
@@ -524,11 +530,14 @@
 			},
 			"htmls/pay_mode.html": {
 				"resources": [
-					"js/mui.min.js"
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css"
 				],
 				"refer": [
 					"htmls/pay_mode_wechat.html",
-					"htmls/pay_mode_alipay.html"
+					"htmls/pay_mode_alipay.html",
+					"htmls/pay_mode_wechat2.html"
 				],
 				"priority": 0
 			},
@@ -537,9 +546,14 @@
 					"js/mui.min.js",
 					"images/aaa.jpg",
 					"fonts/mui.ttf",
-					"css/mui.min.css"
+					"css/mui.min.css",
+					"images/plus.png",
+					"js/mui.zoom.js",
+					"js/mui.previewimage.js"
 				],
-				"refer": [],
+				"refer": [
+					"htmls/pay_result.html"
+				],
 				"priority": 0
 			},
 			"htmls/feedback.html": {
@@ -554,6 +568,47 @@
 			"htmls/pay_mode_alipay.html": {
 				"resources": [
 					"images/aaa.jpg",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"js/mui.zoom.js",
+					"js/mui.previewimage.js",
+					"images/plus.png"
+				],
+				"refer": [
+					"htmls/pay_result.html"
+				],
+				"priority": 0
+			},
+			"htmls/pay_mode_wechat2.html": {
+				"resources": [
+					"js/mui.zoom.js",
+					"js/mui.previewimage.js",
+					"images/plus.png",
+					"images/aaa.jpg",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"js/jquery.min.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"htmls/pay_result.html": {
+				"resources": [
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css"
+				],
+				"refer": [
+					"htmls/main.html",
+					"htmls/my_orders_main.html"
+				],
+				"priority": 0
+			},
+			"htmls/join_in.html": {
+				"resources": [
+					"images/joinin.JPG",
 					"js/mui.min.js",
 					"fonts/mui.ttf",
 					"css/mui.min.css"
